<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:padding="15dp"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/forewordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/created_by"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/linkTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/link_foreword"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/epilogueTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/about_data"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/versionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>
</ScrollView>
